corrected main.tf

--- a/.github/workflows/terraform-tf.yaml
+++ b/.github/workflows/terraform-tf.yaml
@@ -24,17 +24,19 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: 1.6.3
+    
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: terraform init -backend-config="bucket=tf-state-ecr-nazgul"
 
-    - name: Terraform formatting
+    # Checks that all Terraform configuration files adhere to a canonical format
+    - name: Terraform Format
       run: terraform fmt -check
-      continue-on-error: false
 
-    - name: Initialize Terraform
-      run: terraform init
+    # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      run: terraform plan -input=false -var-file=project-nazgul.tfvars
 
-    - name: Plan Terraform changes
-      run: terraform plan
-
-    - name: Apply Terraform changes
-      if: success() && github.event_name == 'push' && github.ref == 'refs/heads/main'
-      run: terraform apply -auto-approve
+    # Build infrastructure according to Terraform configuration files
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -input=false -var-file=project-nazgul.tfvars
