--- a/.github/workflows/terraform-tf.yaml
+++ b/.github/workflows/terraform-tf.yaml
@@ -27,11 +27,12 @@ jobs:
     
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform init -backend-config="bucket=tf-state-ecr-nazgul"
+      run: terraform init 
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       run: terraform fmt -check
+      continue-on-error: false
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
