--- a/.github/workflows/terraform-tf.yaml
+++ b/.github/workflows/terraform-tf.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+        - main 
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -24,21 +24,18 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: 1.6.3
-    
-      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init 
 
-    # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
+    - name: Terraform formatting
       run: terraform fmt -check
       continue-on-error: false
 
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan 
+    - name: Initialize Terraform
+      run: terraform init
 
-    # Build infrastructure according to Terraform configuration files
+    - name: Plan Terraform changes
+      run: terraform plan
+
     - name: Apply Terraform changes
-      if: success() && github.event_name == 'push' && github.ref == 'refs/heads/main'
+      if: success() 
+    #   && github.event_name == 'push' && github.ref == 'refs/heads/main'
       run: terraform apply -auto-approve
